--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analisador de números</title>
-    <link rel="stylesheet" href="estilo_modelo.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -29,6 +29,6 @@
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
-    <script src="modelo.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
